unpackaged/main/default/objects/Opportunity/fields/Reject_Cause__c.field-meta.xml
<CustomField>
    <fullName>Reject_Cause__c</fullName>
    <description>Motif de rejet</description>
    <label>Reject Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Incomplete data</fullName>
            </value>
            <value>
                <fullName>Off target</fullName>
            </value>
            <value>
                <fullName>BANT reject - budget</fullName>
            </value>
            <value>
                <fullName>BANT reject - authority</fullName>
            </value>
            <value>
                <fullName>BANT reject - need (functional perimeter)</fullName>
            </value>
            <value>
                <fullName>BANT reject - need (technology)</fullName>
            </value>
            <value>
                <fullName>BANT reject - need (international perimeter)</fullName>
            </value>
            <value>
                <fullName>BANT reject - timing</fullName>
            </value>
            <value>
                <fullName>Unreachable</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Non commercial request</fullName>
            </value>
            <value>
                <fullName>Signed for the competition</fullName>
            </value>
            <value>
                <fullName>Already a client</fullName>
            </value>
            <value>
                <fullName>Abandoned project</fullName>
            </value>
            <value>
                <fullName>Not the good lead owner</fullName>
            </value>
            <value>
                <fullName>Already created opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>