unpackaged/main/default/objects/Opportunity/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Ajout d'un champs "Revenue" dans les oppys et targeting plan sur les montant cibles
W-001300</description>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>