unpackaged/main/default/objects/Opportunity/fields/Rounded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rounded_Amount__c</fullName>
    <description>champ formule to ROUND(Amount,0)</description>
    <formula>ROUND(Amount,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rounded Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>