unpackaged/main/default/objects/Opportunity/fields/Saas_Booking_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Saas_Booking_Amount2__c</fullName>
    <description>la somme des produits de type Saas Booking en tenant compte du montant Saas (max 36 mois)</description>
    <label>TECH Saas Booking Amount</label>
    <summarizedField>OpportunityLineItem.Saas_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.StructureLevel1__c</field>
        <operation>equals</operation>
        <value>Saas</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>