unpackaged/main/default/objects/Opportunity/fields/SaaS_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Booking_Amount__c</fullName>
    <description>Amount of SaaS booking</description>
    <label>SaaS Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>