unpackaged/main/default/objects/Opportunity/fields/SaaS_Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Contract_Duration__c</fullName>
    <label>SaaS Contract Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>