unpackaged/main/default/objects/Opportunity/fields/SaaS_Duration__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Duration__c</fullName>
    <description>SaaS Duration (used to calculate SaaS amount)</description>
    <label>SaaS Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>