unpackaged/main/default/objects/Opportunity/fields/Sales_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Evaluation__c</fullName>
    <description>Sales Evaluation</description>
    <label>Sales Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Forecast_Category_EDIT__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>