unpackaged/main/default/objects/Opportunity/fields/Selling_Context__c.field-meta.xml
<CustomField>
    <fullName>Selling_Context__c</fullName>
    <label>Selling Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor Selling Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>