unpackaged/main/default/objects/Opportunity/fields/Specific_Developments_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Specific_Developments_Amounts__c</fullName>
    <label>Specific Developments Amounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>