unpackaged/main/default/objects/Opportunity/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>State / Province</description>
    <label>State / Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>