unpackaged/main/default/objects/Opportunity/fields/Status_Quote_BuyMe__c.field-meta.xml
<CustomField>
    <fullName>Status_Quote_BuyMe__c</fullName>
    <label>Status Quote BuyMe</label>
    <length>35</length>
    <type>Text</type>
</CustomField>