unpackaged/main/default/objects/Opportunity/fields/SubSalesPurpose__c.field-meta.xml
<CustomField>
    <fullName>SubSalesPurpose__c</fullName>
    <label>Sub Sales Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Purpose__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubSalesPurpose</valueSetName>
    </valueSet>
</CustomField>