unpackaged/main/default/objects/Opportunity/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>Suffix</description>
    <label>Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>