unpackaged/main/default/objects/Opportunity/fields/Swing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Swing_Rate__c</fullName>
    <label>Swing Rate (not used anymore)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>