unpackaged/main/default/objects/Opportunity/fields/Targeting_Plan_2__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Plan_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Targeting Plan 2</description>
    <inlineHelpText>Second targeting plan</inlineHelpText>
    <label>Targeting Plan 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Targeting_Plan__c.End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Targeting_Plan__c.Date_du_jour__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Targeting_Plan__c</referenceTo>
    <relationshipLabel>Opportunities (Targeting Plan 2)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>