unpackaged/main/default/objects/Opportunity/fields/Targeting_Plan__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan commercial</description>
    <label>Targeting Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Targeting_Plan__c.End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Targeting_Plan__c.Date_du_jour__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Targeting_Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>