unpackaged/main/default/objects/Opportunity/fields/TBDSalesRegion__c.field-meta.xml
<CustomField>
    <fullName>TBDSalesRegion__c</fullName>
    <label>TO BE DELETED Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Purpose</valueSetName>
    </valueSet>
</CustomField>