unpackaged/main/default/objects/Opportunity/fields/TECH_BU_Created_By_2__c.field-meta.xml
<CustomField>
    <fullName>TECH_BU_Created_By_2__c</fullName>
    <label>TECH BU Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>