unpackaged/main/default/objects/Opportunity/fields/TECH_BU_deducted__c.field-meta.xml
<CustomField>
    <fullName>TECH_BU_deducted__c</fullName>
    <description>Deduce the BU of the opportunity based on the Expertise</description>
    <formula>IF ( ISPICKVAL(Expertise__c, '110'), "CPA",

IF (OR(ISPICKVAL(Expertise__c, '350'),ISPICKVAL(Expertise__c, '340'), ISPICKVAL(Expertise__c,
'310'), ISPICKVAL(Expertise__c, '360'), ISPICKVAL(Expertise__c, '370')), "FINANCE",

IF (OR(ISPICKVAL(Expertise__c, '320'), ISPICKVAL(Expertise__c, '380')), "HCM",

IF (ISPICKVAL(Expertise__c, '200'), "RETAIL",

IF (ISPICKVAL(Expertise__c, '100'), "SB",

IF (ISPICKVAL(Expertise__c, '999'), "OTHER",

""

)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH BU deducted</label>
    <type>Text</type>
</CustomField>