unpackaged/main/default/objects/Opportunity/fields/TECH_By_Pass_VR__c.field-meta.xml
<CustomField>
    <fullName>TECH_By_Pass_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical Field to by pass validation rules in PB</description>
    <label>TECH By Pass VR</label>
    <type>Checkbox</type>
</CustomField>