unpackaged/main/default/objects/Opportunity/fields/TECH_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>TECH_Closing_Date__c</fullName>
    <label>TECH Closing Date</label>
    <type>DateTime</type>
</CustomField>