unpackaged/main/default/objects/Opportunity/fields/TECH_compare_Saas_Amount__c.field-meta.xml
<CustomField>
    <fullName>TECH_compare_Saas_Amount__c</fullName>
    <formula>Amount  =  SaaS_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH compare Saas &amp;&amp; Amount</label>
    <type>Checkbox</type>
</CustomField>