unpackaged/main/default/objects/Opportunity/fields/TECH_CPQ_Validation__c.field-meta.xml
<CustomField>
    <fullName>TECH_CPQ_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH CPQ Validation</label>
    <type>Checkbox</type>
</CustomField>