unpackaged/main/default/objects/Opportunity/fields/TECH_Created_Stage__c.field-meta.xml
<CustomField>
    <fullName>TECH_Created_Stage__c</fullName>
    <label>TECH Created Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>