unpackaged/main/default/objects/Opportunity/fields/TECH_Force_Owner__c.field-meta.xml
<CustomField>
    <fullName>TECH_Force_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Force Owner</label>
    <type>Checkbox</type>
</CustomField>