unpackaged/main/default/objects/Opportunity/fields/Tech_Get_Date__c.field-meta.xml
<CustomField>
    <fullName>Tech_Get_Date__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Get Date</label>
    <type>Date</type>
</CustomField>