unpackaged/main/default/objects/Opportunity/fields/Tech_Get_Time__c.field-meta.xml
<CustomField>
    <fullName>Tech_Get_Time__c</fullName>
    <formula>TIMENOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Get Time</label>
    <type>Time</type>
</CustomField>