unpackaged/main/default/objects/Opportunity/fields/Tech_Get_Week__c.field-meta.xml
<CustomField>
    <fullName>Tech_Get_Week__c</fullName>
    <formula>TEXT(ISOYEAR(now())) &amp; '-' &amp; IF(LEN(TEXT(ISOWEEK(now())))=2, TEXT(ISOWEEK(now())) ,'0' &amp; TEXT(ISOWEEK(now())) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Get Week</label>
    <type>Text</type>
</CustomField>