unpackaged/main/default/objects/Opportunity/fields/TECH_Has_a_CPQ_quote__c.field-meta.xml
<CustomField>
    <fullName>TECH_Has_a_CPQ_quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Has a CPQ quote</label>
    <type>Checkbox</type>
</CustomField>