unpackaged/main/default/objects/Opportunity/fields/TECH_Has_a_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>TECH_Has_a_decision_maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Has a decision maker</label>
    <type>Checkbox</type>
</CustomField>