unpackaged/main/default/objects/Opportunity/fields/TECH_HasOppLineItem__c.field-meta.xml
<CustomField>
    <fullName>TECH_HasOppLineItem__c</fullName>
    <label>TECH_HasOppLineItem</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>