unpackaged/main/default/objects/Opportunity/fields/TECH_Last_PRM_File_Or_Note_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>TECH_Last_PRM_File_Or_Note_Creation_Date__c</fullName>
    <label>TECH Last PRM File Or Note Creation Date</label>
    <type>DateTime</type>
</CustomField>