unpackaged/main/default/objects/Opportunity/fields/TECH_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Lead_Id__c</fullName>
    <description>Id of the lead converted into this opportunity</description>
    <label>TECH Lead Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>