unpackaged/main/default/objects/Opportunity/fields/TECH_MQL_Check__c.field-meta.xml
<CustomField>
    <fullName>TECH_MQL_Check__c</fullName>
    <label>TECH MQL Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed CPA/SMB</fullName>
            </value>
            <value>
                <fullName>Closed Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>