unpackaged/main/default/objects/Opportunity/fields/TECH_MQL_Oppty__c.field-meta.xml
<CustomField>
    <fullName>TECH_MQL_Oppty__c</fullName>
    <description>Technical Field used to know whether the oppy was created by Marketing (from Lead or autocreated when a contact's marketing status was changed to AQL)</description>
    <formula>OR ( Oppy_converted_from_Lead__c ,Oppy_AutoCreated__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH MQL Oppty</label>
    <type>Checkbox</type>
</CustomField>