unpackaged/main/default/objects/Opportunity/fields/TECH_New_oppy_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_oppy_From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New oppy From Lead</label>
    <type>Checkbox</type>
</CustomField>