unpackaged/main/default/objects/Opportunity/fields/TECH_New_Quote_On_Off__c.field-meta.xml
<CustomField>
    <fullName>TECH_New_Quote_On_Off__c</fullName>
    <description>This field compute 4 filters to hide the new quote bouton</description>
    <formula>OR ( 
	ISPICKVAL(StageName, 'D - Draw up the solution'),
	ISPICKVAL(StageName, 'C - Validate the solution'),
	ISPICKVAL(StageName, 'B - Negotiate'),
	ISPICKVAL(StageName, 'A - Sign')
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH New Quote On Off</label>
    <type>Checkbox</type>
</CustomField>