unpackaged/main/default/objects/Opportunity/fields/TECH_Professional_Services_Workload__c.field-meta.xml
<CustomField>
    <fullName>TECH_Professional_Services_Workload__c</fullName>
    <label>TECH Professional Services Workload</label>
    <summarizedField>OpportunityLineItem.TechProfServicesWorkload__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>