unpackaged/main/default/objects/Opportunity/fields/TECH_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Territory_Id__c</fullName>
    <label>TECH Territory Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>