unpackaged/main/default/objects/Opportunity/fields/TECH_Territory_To_Be_Calculated__c.field-meta.xml
<CustomField>
    <fullName>TECH_Territory_To_Be_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Territory To Be Calculated</label>
    <type>Checkbox</type>
</CustomField>