unpackaged/main/default/objects/Opportunity/fields/TECHOwnerCalculated__c.field-meta.xml
<CustomField>
    <fullName>TECHOwnerCalculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECHOwnerCalculated</label>
    <type>Checkbox</type>
</CustomField>