unpackaged/main/default/objects/Opportunity/fields/TECHSalesPurposeBlockage__c.field-meta.xml
<CustomField>
    <fullName>TECHSalesPurposeBlockage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Sales Purpose Blockage</label>
    <type>Checkbox</type>
</CustomField>