unpackaged/main/default/objects/Opportunity/fields/TEMP_Saas__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Saas__c</fullName>
    <formula>0.00+IF(Contract_Duration__c &gt; 36, 36.0,1.00*Contract_Duration__c) *
(New_MRR__c -  
	IF(	ISPICKVAL(Sales_Purpose__c,"612"), 
		IF	(ISBLANK(Old_MRR__c),
			0.00,
			Old_MRR__c ),
		0.00
		)
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEMP Saas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>