unpackaged/main/default/objects/Opportunity/fields/TerritoryCode__c.field-meta.xml
<CustomField>
    <fullName>TerritoryCode__c</fullName>
    <label>Territory Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>