unpackaged/main/default/objects/Opportunity/fields/testOppyCrossBU__c.field-meta.xml
<CustomField>
    <fullName>testOppyCrossBU__c</fullName>
    <formula>IF (
AND(
TECH_BU_deducted__c = TECH_BU_Created_By_2__c , 
OR(
ISPICKVAL( StageName , 'G - Sales Ready'), 
ISPICKVAL( StageName , 'F - Identify the needs'), 
ISPICKVAL( StageName , 'E - Analyze the needs'), 
ISPICKVAL( StageName , 'D - Draw up the solution'), 
ISPICKVAL( StageName , 'C - Validate the solution'), 
ISPICKVAL( StageName , 'B - Negotiate'), 
ISPICKVAL( StageName , 'A - Sign')
)
),"No",

IF(
NOT(TECH_Created_Stage__c = 'G - Sales Ready'), "",

IF(
OR(ISPICKVAL(LeadSource, 'SDR'), ISPICKVAL(LeadSource, 'Partner'), ISPICKVAL(LeadSource, 'EuroCRM'), ISPICKVAL(LeadSource, 'Customer Care'), ISPICKVAL(LeadSource, 'SDR-Marketing Prospecting'), ISPICKVAL(LeadSource,'SDR Lead Purchase')),"",

"Yes"

)
)
)</formula>
    <label>testOppyCrossBU</label>
    <type>Text</type>
</CustomField>