unpackaged/main/default/objects/Opportunity/fields/Top_Account__c.field-meta.xml
<CustomField>
    <fullName>Top_Account__c</fullName>
    <formula>IF( Account.Top_Account__c = true, true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Account</label>
    <type>Checkbox</type>
</CustomField>