unpackaged/main/default/objects/Opportunity/fields/Why_would_you_change__c.field-meta.xml
<CustomField>
    <fullName>Why_would_you_change__c</fullName>
    <description>Why would you change ?</description>
    <label>Why would you change ?</label>
    <type>TextArea</type>
</CustomField>