unpackaged/main/default/objects/Opportunity/fields/Winning_competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_competitor__c</fullName>
    <label>Winning competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>15FIVE</fullName>
            </value>
            <value>
                <fullName>360L</fullName>
            </value>
            <value>
                <fullName>365 TALENTS</fullName>
            </value>
            <value>
                <fullName>AAREON</fullName>
            </value>
            <value>
                <fullName>ACCOUNTIFY</fullName>
            </value>
            <value>
                <fullName>ACCOUNTOR</fullName>
            </value>
            <value>
                <fullName>ACD GROUPE</fullName>
            </value>
            <value>
                <fullName>ADEQUASYS</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>AGIRIS</fullName>
            </value>
            <value>
                <fullName>ALPHA3I</fullName>
            </value>
            <value>
                <fullName>ALTAYS</fullName>
            </value>
            <value>
                <fullName>AMELKIS</fullName>
            </value>
            <value>
                <fullName>Apisoft</fullName>
            </value>
            <value>
                <fullName>Apologic</fullName>
            </value>
            <value>
                <fullName>APTOS</fullName>
            </value>
            <value>
                <fullName>ARAGON</fullName>
            </value>
            <value>
                <fullName>ARC LOGICIELS</fullName>
            </value>
            <value>
                <fullName>ARTICULATE</fullName>
            </value>
            <value>
                <fullName>AUTEL/BEST STORE</fullName>
            </value>
            <value>
                <fullName>AVATURE</fullName>
            </value>
            <value>
                <fullName>AVELON RMS</fullName>
            </value>
            <value>
                <fullName>AXWAY</fullName>
            </value>
            <value>
                <fullName>BAISON</fullName>
            </value>
            <value>
                <fullName>BAMBOO HR</fullName>
            </value>
            <value>
                <fullName>BANQUE POPULAIRE</fullName>
            </value>
            <value>
                <fullName>BEARINGPOINT</fullName>
            </value>
            <value>
                <fullName>BEEBOLE</fullName>
            </value>
            <value>
                <fullName>BERGER LEVRAULT</fullName>
            </value>
            <value>
                <fullName>BIZNEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>