unpackaged/main/default/objects/Opportunity/fields/Winning_Competitor_hidden__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor_hidden__c</fullName>
    <label>Winning Competitor hidden</label>
    <length>200</length>
    <type>Text</type>
</CustomField>