unpackaged/main/default/objects/Opportunity/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>Zip/Postal Code</description>
    <label>Zip/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>