unpackaged/main/default/objects/Opportunity/recordTypes/Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Opportunity</fullName>
    <active>true</active>
    <businessProcess>Oppy Sales Process</businessProcess>
    <description>'Classic' Opportunity</description>
    <label>Opportunity</label>
</RecordType>