unpackaged/main/default/objects/Opportunity/validationRules/Validation_BU_before_MQL_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_BU_before_MQL_Status</fullName>
    <active>true</active>
    <description>Check that the BU is filled before the status is changed to MQL</description>
    <errorConditionFormula>ISPICKVAL(Business_Unit_Opportunity__c, "") 
&amp;&amp; ISPICKVAL(StageName ,"MQL") 
&amp;&amp; !Oppy_converted_from_Lead__c</errorConditionFormula>
    <errorDisplayField>Business_Unit_Opportunity__c</errorDisplayField>
    <errorMessage>The Business Unit field is required</errorMessage>
</ValidationRule>