unpackaged/main/default/objects/Opportunity/validationRules/Validation_of_close_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_of_close_date</fullName>
    <active>true</active>
    <description>Close date can be changed with a date before today's date only is the opportunity stage is Closed Won or Closed Lost or No Go Client or No Go CEGID.</description>
    <errorConditionFormula>AND (
	NOT( $User.BypassVR__c ),
	ISCHANGED(CloseDate) &amp;&amp;(CloseDate  &lt;  TODAY() 
		&amp;&amp; (ISPICKVAL( StageName , 'F - Identify the needs')  || 
		 ISPICKVAL(StageName, 'E - Analyze the needs')  || 
			 ISPICKVAL(StageName, 'D - Draw up the solution')  || 
						 ISPICKVAL(StageName, 'C - Validate the solution')  || 
							 ISPICKVAL(StageName, 'B - Negotiate')   || 
								 ISPICKVAL(StageName, 'A - Sign')))
    )</errorConditionFormula>
    <errorMessage>Close date cannot be in the past.</errorMessage>
</ValidationRule>