unpackaged/main/default/objects/Opportunity/validationRules/VR0037_ImpartnerPartnerLevelEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>VR0037_ImpartnerPartnerLevelEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c),
ISCHANGED(ImpartnerPRM__PartnerAccount__c),
NOT(ImpartnerPRM__PartnerAccount__c = null),
ISBLANK(TEXT(ImpartnerPRM__PartnerAccount__r.Impartner_Partner_Level__c ))
)</errorConditionFormula>
    <errorDisplayField>ImpartnerPRM__PartnerAccount__c</errorDisplayField>
    <errorMessage>This Partner Account is not related to PRM. Please, use the appropriate partner field at the top of the Opportunity page.</errorMessage>
</ValidationRule>