unpackaged/main/default/objects/Opportunity/validationRules/VR0038_ImpartnerPartnerSynctoprmEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>VR0038_ImpartnerPartnerSynctoprmEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT( $User.BypassVR__c),
ISCHANGED(  ImpartnerPRM__PartnerContact__c ),
ImpartnerPRM__PartnerContact__r.Sync_to_PRM__c = false)</errorConditionFormula>
    <errorDisplayField>ImpartnerPRM__PartnerContact__c</errorDisplayField>
    <errorMessage>This contact has not access to PRM. Please, use the person adapted.</errorMessage>
</ValidationRule>